# publish-subscribe

./: .gitignore  CMakeLists.txt  README.md  publish-subscribe-p3.drawio
cmake/modules/: CoverageCompileOpts.cmake
src/: CMakeLists.txt  Client.h  Controller.cpp  Controller.h  Message.h  MessageDispatcher.cpp  MessageDispatcher.h  main.cpp
src/client/: CMakeLists.txt  Client.cpp  ClientConsoleFake.h  Client_TCP.cpp  Client_TCP.h  Controller.cpp  Controller.h  Input.cpp  Input.h  InputConsole.cpp  InputConsole.h  View.h  ViewConsole.cpp  ViewConsole.h  main.cpp
src/server/: CMakeLists.txt  Message.cpp  MessageDispatcher.cpp  MessageDispatcher.h  Reader.h  Sender.h  ServerTCP.h_bak  Server_TCP.cpp  Server_TCP.h  main.cpp  main.cpp_bak
test/: CMakeLists.txt
test/mock/: ClientMock.h  InputMock.h  ReaderMock.h  SenderMock.h  ViewMock.h
test/src/: ControllerTest.cpp  ControllerTest.h  MessageDispatcherTest.cpp  MessageDispatcherTest.h  MessageTest.cpp  test.cpp
